# qview

./: Cargo.toml  README.md
src/: autocomplete.rs  config.rs  error.rs  main.rs  metadata.rs  metadata.rs.bak  validator.rs
src/autocomplete/: mod.rs  suggestion.rs  suggestion_tests.rs
src/logic/: cursor.rs  datatype.rs  error.rs  mod.rs  postgres_ast.rs
src/metadata/: column.rs  database.rs  mod.rs  schema.rs  table.rs
src/sql/: keyword.rs  mod.rs  token.rs  token_kind.rs  tokenizer.rs
src/testing/: container.rs  context.rs  mod.rs
