[package]
name = "qview"
version = "0.1.0"
edition = "2024"

[dependencies]
confique = "0.4.0"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
futures = "0.3.31"
rand = "0.9.2"
rstest = "0.26.1"
test-context = "0.5.0"
testcontainers = "0.25.2"
tokio = "1.48.0"
